# multiple_socket_exchanges

./: .gitignore  Cargo.toml  LICENSE  README.md  ws_details.json
application/: Cargo.toml
application/src/: main.rs
ws_socket/: Cargo.toml
ws_socket/src/: errors.rs  helpers.rs  lib.rs  parser.rs  test.rs  types.rs
