[package]
name = "ws_socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
tokio-tungstenite = { version="0.23", features=["native-tls"] }
tungstenite = { version="0.23" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
futures-util = "0.3"
thiserror = "1.0"